Correct alignment for texts on about

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -77,6 +77,10 @@
         
         .texts{
             padding-left: 16px;
+
+            h5{
+                margin: 0 0 8px;
+            }
         }
     }
 }
